# lthash-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  README.template.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
benches/: lthash16_performance.rs  lthash32_performance.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: collect.rs  lthash16_extend.rs  lthash16_insert.rs  lthash16_remove.rs  lthash16_try_from_bytes.rs  lthash32_collect.rs  lthash32_extend.rs  lthash32_insert.rs  lthash32_remove.rs  lthash32_try_from_bytes.rs
src/: lib.rs  lthash.rs  lthash16.rs  lthash32.rs  main.rs  utils.rs
tests/: lthash16.rs  lthash32.rs  main.rs
tests/test-data/: lorum-hash-16.txt  lorum-hash-32.txt  lorum-ipsum.txt
