[package]
name = "lthash-rs"
version = "0.0.1"
edition = "2021"
description = "LtHash - Homomorphic Hash Function"
repository = "https://github.com/runtime-machines/lthash-rs"
authors = ["Roberto Ripamonti <roberto.ripamonti@ymail.com>", "RunTime Machines <hello@runtimemachines.com"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://runtimemachines.io"
keywords = ["crypto", "homomorphic", "hash"]
categories = ["cryptography"]
include = [
    "/benches/**",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/src/**",
    "/tests/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.6"
byteorder = "1"
bytemuck = "1.13.0"
subtle = "2.4.1"
static_assertions = "1.1.0"

[dev-dependencies]
sha3 = "0.10"
criterion-cycles-per-byte = "0.4"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "lthash16_performance"
harness = false