[package]
name = "lthash-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sha3 = "0.10"

[dependencies.lthash-rs]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "insert"
path = "fuzz_targets/insert.rs"
test = false
doc = false

[[bin]]
name = "remove"
path = "fuzz_targets/remove.rs"
test = false
doc = false

[[bin]]
name = "extend"
path = "fuzz_targets/extend.rs"
test = false
doc = false

[[bin]]
name = "collect"
path = "fuzz_targets/collect.rs"
test = false
doc = false

[[bin]]
name = "try_from_bytes"
path = "fuzz_targets/try_from_bytes.rs"
test = false
doc = false